| Bug #35031 | Using maria-block-size != 8192 makes Maria crash or say "error 174" | ||
|---|---|---|---|
| Submitted: | 4 Mar 2008 11:23 | Modified: | 4 Mar 2008 20:48 |
| Reporter: | Guilhem Bichot | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Maria storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1-maria | OS: | Any |
| Assigned to: | Michael Widenius | CPU Architecture: | Any |
[4 Mar 2008 11:23]
Guilhem Bichot
[4 Mar 2008 17:53]
MySQL Verification Team
i got slightly different assertion when maria-block-size was not multiple of 4096: Version: '5.1.24-maria-alpha-debug' socket: '' port: 3306 Source distribution Assertion failed: maria_block_size && maria_block_size % 4096 == 0, file .\ma_create.c, line 78 mysqld --console --skip-grant-tables --maria-block-size=1 mysql> create table u (a int) engine=maria; ERROR 2013 (HY000): Lost connection to MySQL server during query
[4 Mar 2008 20:48]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/43429 ChangeSet@1.2617, 2008-03-04 21:47:07+01:00, guilhem@gbichot4.local +1 -0 Fixed excessive assertion reported in BUG#35031 "Using maria-block-size != 8192 makes Maria crash or say "error 174""
