Fixed excessive assertion reported in BUG#35031 "Using maria-block-size != 8192 makes Maria crash or say "error 174""

storage/maria/ma_create.c:
  fixed excessive assertion